# zcore

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  database.py  exception_handlers.py  exceptions.py  index.html  mkdocs.yml  pyproject.toml  repository.py  req.txt  router.py  search.py  security.py  service.py  sitemap.xml  utils.py  validators.py
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  test.yml
auth/: actions.py  dependencies.py  models.py  security.py
cache/: base.py
cheatsheet/: index.html
context/: context.py
contract/auth/: users.py
contract/catalog/: catalog_type.py
contract/crm/: contacts.py  doctor.py  pateint.py
contract/personnel/: hr_profile.py
contract/workflow/: service.py  stage.py
db/: api.py  bridge.py  pagination.py  repository.py  search.py  service.py  setup.py
docs/: cheatsheet.md  index.md  overrides.css
docs/how-to/: auth-setup.md  base-router-extensibility.md  custom-storage-provider.md  dynamic-field-masking.md  field-masking.md  multi-repo-transactions.md  websocket-pubsub.md
docs/learn/: 1-db.md  2-schemas.md  3-repository.md  4-service.md  5-router.md  6-plugin.md  7-kernel.md  8-main.md  installation.md  overview.md  quickstart.md
exception/: exception_handlers.py
features/database/: repository.md  service.md
features/ecosystem/: cache.md
features/infrastructure/: config.md  di.md  kernel.md  utils.md
features/security/: security.md
how-to/: auth-setup.md  base-router-extensibility.md  custom-storage-provider.md  field-masking.md  multi-repo-transactions.md  websocket-pubsub.md
how-to/auth-setup/: index.html
how-to/base-router-extensibility/: index.html
how-to/custom-storage-provider/: index.html
learn/: 2-schemas.md  3-repository.md  4-service.md  installation.md
learn/1-db/: index.html
messaging/: middleware.py  models.py  outbox_handler.py  repository.py  router.py  schemas.py  service.py  sse.py
plugin/: plugin_system.py
search/: search_index.json
security/: hashing.py  jwt.py  permissions.py  security.py
service/: base.py
storage/: base.py  local.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config.py  test_context.py  test_db_lifecycle.py  test_di.py  test_events.py  test_exceptions.py  test_kernel.py  test_logging.py  test_pagination.py  test_repository.py  test_search.py  test_security.py  test_service.py  test_storage.py  test_streams.py  test_utils.py  test_web.py
utils/: utils.py  validators.py
web/: middleware.py  response.py  router.py  sse.py
zcore/: config.py
(+142 files in other folders)
